Fix modal overflow issue

--- a/src/stores/SettingsStore/components/SettingsModal/SettingsModal.scss
+++ b/src/stores/SettingsStore/components/SettingsModal/SettingsModal.scss
@@ -24,6 +24,11 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    min-height: 0;
+
+    > .tab-bar {
+      min-height: 0;
+    }
 
     > .button-panel {
       align-self: flex-end;
